<resources>
    <string name="app_name">RMY Inventory &amp; Barcode Scanner</string>
    <string name="camera_not_granted">Camera Access Denied</string>
    <string name="bnm_scan_single">Scan</string>
    <string name="bnm_items">Items</string>
    <string name="bnm_scan_multiple">Transactions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_result">Scan Result</string>
    <string name="order_conf_qty"> x (%s) </string>
    <string name="bnv_home">Beranda</string>
    <string name="bnv_product">Produk</string>
    <string name="bnv_cart">Keranjang</string>
    <string name="home_header_1">scan untuk menambahkan barang ke database</string>
    <string name="chart_header_1">scan untuk menambahkan barang ke keranjang</string>
    <string name="btn_clear">Bersihkan</string>
    <string name="btn_confirm">Konfirmasi</string>
    <string name="edt_product_name">Nama Produk</string>
    <string name="edt_product_price">Harga Produk</string>
    <string name="btn_add_product_database">Tambahkan Produk</string>
    <string name="edt_product_stock">Stok Produk</string>
    <string name="edt_product_id">ID Produk</string>
    <string name="btn_update_product_database">Update Produk</string>
    <string name="btn_delete_product_database">Hapus Produk</string>
    <string name="edt_note">Catatan</string>
    <string name="qty_and_stock">%s/%s</string>
    <string name="slash">/</string>
    <string name="edt_product_unit">Satuan Produk</string>
    <string name="str_transaction_history">Riwayat Transaksi</string>
    <string name="str_import">Import</string>
    <string name="str_export">Export</string>
    <string name="str_transaction_history_newline">Riwayat\nTransaksi</string>
    <string name="str_tap_to_scan">Tekan untuk memulai scan</string>
    <string name="str_loading">Dalam Proses</string>
    <string-array name="product_currency">
        <item>(Rp.) Rupiah</item>
        <item>(USD.) USDollar</item>
    </string-array>
    <string-array name="product_unit">
        <item>Buah</item>
        <item>Renteng</item>
    </string-array>
    <string name="lbl_product_empty_title">Oops! tidak ada \nproduk apapun!</string>
    <string name="lbl_product_empty_caption">Mulai tambahkan produk dengan melakukan\nscan barcode di beranda atau dengan\nmenekan tombol di bawah ini.</string>
    <string name="lbl_cart_empty_title">Keranjang masih kosong!</string>
    <string name="lbl_cart_empty_caption">Mulai tambahkan produk\nkedalam keranjang.</string>
    <string name="lbl_product_empty_btn_add">Mulai Tambahkan</string>
    <string name="value_number">%1$d</string>
</resources>