<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CartFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/colorBackground"
                    android:gravity="center"
                    android:padding="@dimen/margin_padding_size_medium"
                    android:text="@string/chart_header_1"
                    android:textSize="18sp" />

                <androidx.camera.view.PreviewView
                    android:id="@+id/camera_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_padding_size_small">

            <LinearLayout
                android:id="@+id/ll_order_item_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_clear_cart"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_size_small"
                    android:layout_weight="1"
                    android:text="@string/btn_clear"
                    android:textColor="@android:color/holo_red_dark"
                    app:icon="@drawable/ic_baseline_restore_from_trash_24"
                    app:iconTint="@android:color/holo_red_dark" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_confirm_cart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/btn_confirm"
                    app:icon="@drawable/ic_baseline_add_shopping_cart_24" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_cart_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/img_cart_empty_logo"
                        android:layout_width="200dp"
                        android:layout_height="250dp"
                        android:src="@drawable/img_cart_empty" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_cart_empty_title"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_grotesque_bold"
                        android:gravity="center"
                        app:fontFamily="@font/brandon_grotesque_bold"
                        tools:text="@string/lbl_cart_empty_title" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_cart_empty_caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_padding_size_small"
                        android:fontFamily="@font/brandon_grotesque_regular"
                        android:gravity="center"
                        android:textSize="16sp"
                        app:fontFamily="@font/brandon_grotesque_regular"
                        tools:text="@string/lbl_cart_empty_caption" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_padding_size_small"
                    android:visibility="gone"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_holder_cart_single_unit" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_cart_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/ic_baseline_add_24"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>