<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProductFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:paddingHorizontal="@dimen/margin_padding_size_medium">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingVertical="@dimen/margin_padding_size_small"
            app:contentInsetStart="0dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_gray_light"
                app:iconifiedByDefault="false"
                app:queryBackground="@color/transparent"
                app:queryHint="Cari Barang"
                app:searchIcon="@drawable/ic_baseline_search_24" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll_product_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/img_product_empty_logo"
                android:layout_width="250dp"
                android:layout_height="300dp"
                tools:src="@drawable/img_product_empty" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_product_empty_title"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/brandon_grotesque_bold"
                android:gravity="center"
                app:fontFamily="@font/brandon_grotesque_bold"
                tools:text="@string/lbl_product_empty_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_product_empty_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:fontFamily="@font/brandon_grotesque_regular"
                android:gravity="center"
                android:textSize="16sp"
                app:fontFamily="@font/brandon_grotesque_regular"
                tools:text="@string/lbl_product_empty_caption" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_product_empty_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_padding_size_small"
                android:fontFamily="@font/brandon_grotesque_bold"
                android:gravity="center"
                app:fontFamily="@font/brandon_grotesque_bold"
                app:icon="@drawable/ic_baseline_add_24"
                tools:text="@string/lbl_product_empty_btn_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_holder_product" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_product_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/ic_baseline_add_24"
        android:visibility="gone"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>